crates/auto-lang/test/cookbook/errors/004_retain/retain.at
use.rust std::error::Error

fn inner() !str {
    Err("inner error")
}

fn outer() !str {
    let result = inner().?
    Ok(result)
}

fn main() {
    let result = outer()
    var got_err = false
    is result {
        Ok(val) -> print(f"Success: ${val}"),
        Err(e) -> got_err = true
    }
    assert(got_err == true)
}
